Fix deprecated URL creation